2009-09-17  Michael Hasselmann <michaelh@openismus.com>

Refactoring Dialog_Import_CSV: created testcase for the CsvParser's signal emission
	
	* Makefile_tests.am: all tests now run within valgrind by default since mem
	leaks in testcases are potential mem leaks in the application. Parameters might
	need tweaking.
	
	* glom/import_csv.cc (CsvParser::on_idle_parse): Fixed a missing negation in a
	conditional, which was wrongfully leading to signal emissions. Found by the
	import signals testcase.
	
	* test/import/test_parsing.cc: Fixed a null byte issue when setting the raw
	contents of the parser.
	
	* test/import/test_signals.cc: This testcase checks the CsvParser's signal
	emission on varying input. The basic idea was to have on testcase for each
	code path that leads to a signal emission in glom/import_csv.cc, even if that
	leads to overlapping code coverage tests with the parser testcase.

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* Makefile_libglom.am: Don't link libglom
	statically on maemo. (#594355)

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* glom/application.cc: offer_new_or_existing():
	Replace a TODO comment with g_assert_val_if_reached() because
	reaching this branch would mean that the dialog returned
	an unhandled response.

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* regression_tests/test_python_module.cc:
	* Makefile_tests.am:
	Added a regression test for the loading of the python modules.
	Unfortunately this test doesn't trigger the crash bug that
	happens on exit() on the maemo platform.

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* glom/main.cc:
	Really check if pygda module is available. A typo caused
	the check for the glom module twice while the gda module
	wasn't checked at all

2009-09-14  Johannes Schmid  <jschmid@openismus.com>

	* glom/dialog_import_csv.cc:
	Fixed maemo non-exception build of CsvParser refactoring.

2009-09-14  Murray Cumming  <murrayc@murrayc.com>
